--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,11 @@
 			<artifactId>netty-all</artifactId>
 			<version>4.0.26.Final</version>
 		</dependency>
+				
+		<dependency>
+			<groupId>org.java-websocket</groupId>
+			<artifactId>Java-WebSocket</artifactId>
+			<version>1.3.0</version>
+		</dependency>	
 	</dependencies>
 </project>
