--- a/pom.xml
+++ b/pom.xml
@@ -83,15 +83,15 @@
 			<version>4.2</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.0.26.Final</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.java-websocket</groupId>
 			<artifactId>java-WebSocket</artifactId>
-			<version>2.1.0</version>
+			<version>2.0.3</version>
 		</dependency>
 	</dependencies>
 </project>
