添加心跳升级到3.0.3

--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<groupId>com.fy.socket</groupId>
 	<artifactId>fysocketAPPClient</artifactId>
 	<version>3.0.2</version><!-- 基于java-websocket 从3.*开始 -->
+	<!--  添加心跳 升级版本到3.0.3 -->
 	<packaging>jar</packaging>
 
 	<name>SocketAPPClient</name>
