--- a/pom.xml
+++ b/pom.xml
@@ -84,11 +84,11 @@
 			<version>4.2</version>
 			<scope>test</scope>
 		</dependency>
-<!-- 		<dependency>
+		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
 			<version>4.0.26.Final</version>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 			<groupId>com.fy.socket</groupId>
