--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,8 @@
 		<dependency>
 			<groupId>com.fy.socket</groupId>
 			<artifactId>fysockett</artifactId>
-			<version>2.0.4</version><!-- 为fy 新编译版本 -->
+			<version>2.0.4</version>
+			<!-- 为fy 新编译版本 -->
 		</dependency>
 	</dependencies>
 </project>
