创建一个支持测试的分支。该分支基于netty的客户端。

--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,9 @@
 
 	<groupId>com.fy.socket</groupId>
 	<artifactId>fysocketAPPClient</artifactId>
-	<version>3.0.2</version><!-- 基于java-websocket 从3.*开始 -->
+	<version>3.1.0</version><!-- 基于java-websocket 从3.*开始 -->
 	<!--  添加心跳 升级版本到3.0.3 -->
+	<!-- 为了测试，而开发的基于netty 的客户端 3.1.0-->
 	<packaging>jar</packaging>
 
 	<name>SocketAPPClient</name>
@@ -93,7 +94,10 @@
 		<dependency>
 			<groupId>com.fy.socket</groupId>
 			<artifactId>fysockett</artifactId>
-			<version>2.0.4</version><!-- 为fy 新编译版本 -->
+			<version>2.1.0</version>
+			<!-- 为fy 新编译版本 -->
+			 <!--  因为添加了心跳验证连接是否失效 将版本提升到2.0.4 -->
+			 <!-- 使用netty作为基础，只在测试包中使用 2.1.0 -->
 		</dependency>
 	</dependencies>
 </project>
