--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
 
 		<dependency>
 			<groupId>com.fy.socket</groupId>
-			<artifactId>fysockett</artifactId>
+			<artifactId>fysocket</artifactId>
 			<version>2.1.0</version>
 			<!-- 为fy 新编译版本 -->
 			 <!--  因为添加了心跳验证连接是否失效 将版本提升到2.0.4 -->
